test/types/single/sungeun/single-cannot-coerce.chpl

var i : single int = 100;
var s : single string = i;
